# timesfm

./: .gitignore  CLAUDE.md  pyproject.toml  pytest.ini
tests/: README.md  __init__.py  conftest.py  example_usage.py  simple_demo.py
tests/fixtures/: __init__.py  mock_timesfm.py
tests/integration/: __init__.py  test_data_pipeline.py  test_timesfm_api_e2e.py  test_timesfm_real_datasets.py
tests/performance/: __init__.py  benchmark_framework.py  test_model_benchmarks.py
tests/unit/: __init__.py  test_mock_timesfm.py
tests/utils/: __init__.py  data_generators.py  integration_helpers.py  test_helpers.py
timesfm-api/: .env.example  .gitignore  QUICKSTART.md  README.md  SERVER.MD  app.py  pyproject.toml  requirements.prod.txt  test_timesfm_simple.py
timesfm-api/app/: __init__.py  config.py  main.py
timesfm-api/app/api/: __init__.py  forecast.py  health.py
timesfm-api/app/middleware/: __init__.py  logging.py  request_id.py
timesfm-api/app/models/: __init__.py  request.py  response.py
timesfm-api/app/services/: __init__.py  forecasting.py
timesfm-api/data/stocks/: aapl.csv  aapl_close.json  aapl_full.json  googl.csv  googl_close.json  googl_full.json  msft.csv  msft_close.json  msft_full.json
timesfm-api/docker/: Dockerfile.prod  docker-compose.prod.yml
timesfm-api/docs/: production_runbook.md
timesfm-api/examples/: README.md  batch_forecast.py  co2_forecast.py  create_synthetic_data.py  csv_forecast.py  download_stock_data.py  python_client_example.py  quickstart_curl.sh  quickstart_public_datasets.sh  server_usage_example.sh  simple_forecast.py  stock_forecast.py  stock_forecast_curl.sh
timesfm-api/grafana/dashboards/: timesfm-overview.json
timesfm-api/grafana/provisioning/dashboards/: timesfm.yml
timesfm-api/grafana/provisioning/datasources/: prometheus.yml
timesfm-api/k8s/: monitoring.yaml  timesfm-api-deployment.yaml
timesfm-api/scripts/: load_test.py  start_server.sh
timesfm-api/tests/: __init__.py  conftest.py  mocks.py  test_smoke.py
timesfm-api/tests/integration/: test_forecast.py  test_health.py
